Added detail view controller

--- a/Our Family/Base.lproj/Main.storyboard
+++ b/Our Family/Base.lproj/Main.storyboard
@@ -158,6 +158,21 @@
             </objects>
             <point key="canvasLocation" x="846" y="-264"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="OF6-Cb-Dtd">
+            <objects>
+                <viewController id="w7L-ao-cxH" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="mcQ-BY-6RW">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="I13-2J-MVa"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ye4-dc-7nG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1698" y="-261"/>
+        </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
