--- a/Our Family/Base.lproj/Main.storyboard
+++ b/Our Family/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RqH-bf-TxJ">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Our_Family" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hG0-Rm-M2V">
-                                <rect key="frame" x="20" y="44" width="374" height="335"/>
+                                <rect key="frame" x="20" y="88" width="374" height="335"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wvR-rS-goi">
                                         <rect key="frame" x="0.0" y="0.0" width="324" height="41"/>
@@ -31,7 +31,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Cui-0h-438"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BC6-LQ-rcy"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -47,7 +47,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aSf-hA-y11"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d55-wb-whV"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -63,7 +63,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6bw-BN-NSr"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vod-xv-oxD"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -79,7 +79,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mqY-sa-eWr"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="juE-Kt-Njd"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -95,7 +95,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zFS-S9-Tuc"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JmR-7z-yYq"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -111,7 +111,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="huC-oW-80k"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ug4-fY-P7Y"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -127,7 +127,7 @@
                                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rrg-Ao-PHW"/>
+                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zl8-1T-bBG"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -144,6 +144,7 @@
                             <constraint firstItem="hG0-Rm-M2V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="smo-sh-EeN"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="List" id="gNy-7y-wqD"/>
                     <connections>
                         <outletCollection property="buttonCollection" destination="3jf-bn-Xr7" collectionClass="NSMutableArray" id="RnX-tE-dmq"/>
                         <outletCollection property="buttonCollection" destination="bfv-DB-q61" collectionClass="NSMutableArray" id="Fjj-QG-kNe"/>
@@ -156,25 +157,94 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="846" y="-264"/>
+            <point key="canvasLocation" x="1755.072463768116" y="-264.50892857142856"/>
         </scene>
-        <!--View Controller-->
-        <scene sceneID="OF6-Cb-Dtd">
+        <!--Profile-->
+        <scene sceneID="4SD-tt-K1K">
             <objects>
-                <viewController id="w7L-ao-cxH" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="mcQ-BY-6RW">
+                <viewController storyboardIdentifier="ProfileViewController" id="LBi-yS-lg6" customClass="ProfileViewController" customModule="Our_Family" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Znn-We-vyz">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="I13-2J-MVa"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_02" translatesAutoresizingMaskIntoConstraints="NO" id="dvx-zl-QMK">
+                                <rect key="frame" x="117" y="54" width="180" height="180"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="180" id="nkU-rL-nxY"/>
+                                    <constraint firstAttribute="height" constant="180" id="pad-j7-rAN"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="90"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ivan Mykolayovych Andreychuk" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="faG-0f-ETW">
+                                <rect key="frame" x="82" y="254" width="250" height="90"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="SyB-OL-L8u"/>
+                                    <constraint firstAttribute="height" constant="90" id="ehN-yT-sPC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I live in Vyshhorod" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SL4-do-1Wg">
+                                <rect key="frame" x="117" y="354" width="180" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="1ik-Cp-fVU"/>
+                                    <constraint firstAttribute="width" constant="180" id="Ami-db-ZXV"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oLa-Rj-LG5"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="dvx-zl-QMK" firstAttribute="top" secondItem="oLa-Rj-LG5" secondAttribute="top" constant="10" id="Jkk-Yw-YKF"/>
+                            <constraint firstItem="faG-0f-ETW" firstAttribute="centerX" secondItem="Znn-We-vyz" secondAttribute="centerX" id="YUl-Sm-WD1"/>
+                            <constraint firstItem="SL4-do-1Wg" firstAttribute="centerX" secondItem="Znn-We-vyz" secondAttribute="centerX" id="bP3-eA-7tt"/>
+                            <constraint firstItem="faG-0f-ETW" firstAttribute="top" secondItem="dvx-zl-QMK" secondAttribute="bottom" constant="20" id="k70-oe-6wY"/>
+                            <constraint firstItem="SL4-do-1Wg" firstAttribute="top" secondItem="faG-0f-ETW" secondAttribute="bottom" constant="10" id="tQN-Du-LDd"/>
+                            <constraint firstItem="dvx-zl-QMK" firstAttribute="centerX" secondItem="Znn-We-vyz" secondAttribute="centerX" id="zvb-9q-ChL"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Profile" id="GyH-YK-Ya1">
+                        <barButtonItem key="backBarButtonItem" title="List" id="W7e-I2-BTS"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="dvx-zl-QMK" id="xeT-5k-n0M"/>
+                        <outlet property="locationLabel" destination="SL4-do-1Wg" id="I2P-6b-zoa"/>
+                        <outlet property="nameLabel" destination="faG-0f-ETW" id="80U-KS-7aP"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ye4-dc-7nG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IsH-LC-nMC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1698" y="-261"/>
+            <point key="canvasLocation" x="2571.0144927536235" y="-265.17857142857144"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nBB-8e-BVL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RqH-bf-TxJ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="slk-Db-S6d">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="hxZ-Gy-0gS"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eC6-b6-KEC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="844.92753623188412" y="-264.50892857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="img_02" width="480" height="480"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
