Created a custom cell How do the custom cell to unwrap through GUARD or IF Added "familyMember" to Array of the ViewController.swift and to Struct of the Person.swift

--- a/Our Family/Base.lproj/Main.storyboard
+++ b/Our Family/Base.lproj/Main.storyboard
@@ -4,158 +4,38 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--List-->
+        <!--Our family-->
         <scene sceneID="tne-QT-ifu">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Our_Family" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="hG0-Rm-M2V">
-                                <rect key="frame" x="20" y="88" width="374" height="335"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="wvR-rS-goi">
-                                        <rect key="frame" x="0.0" y="0.0" width="324" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3jf-bn-Xr7">
-                                                <rect key="frame" x="0.0" y="0.0" width="324" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Andreychuk Ivan Mykolayovych">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BC6-LQ-rcy"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="2eZ-z9-Ept">
-                                        <rect key="frame" x="0.0" y="49" width="301" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bfv-DB-q61">
-                                                <rect key="frame" x="0.0" y="0.0" width="301" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Andreychuk Alina Martynivna">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="d55-wb-whV"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="NBV-5N-Bej">
-                                        <rect key="frame" x="0.0" y="98" width="281" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAh-38-jrh">
-                                                <rect key="frame" x="0.0" y="0.0" width="281" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Andreychuk Ivan Ivanovych">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vod-xv-oxD"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="vvo-ns-4LH">
-                                        <rect key="frame" x="0.0" y="147" width="326" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUd-T1-KTN">
-                                                <rect key="frame" x="0.0" y="0.0" width="326" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Danilov Oleksandr Anatoliovych">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="juE-Kt-Njd"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="11Z-y6-TSF">
-                                        <rect key="frame" x="0.0" y="196" width="263" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9MC-C7-M9J">
-                                                <rect key="frame" x="0.0" y="0.0" width="263" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Danilova Oksana Ivanivna">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JmR-7z-yYq"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="m9s-FF-oMD">
-                                        <rect key="frame" x="0.0" y="245" width="334" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jet-bb-CKL">
-                                                <rect key="frame" x="0.0" y="0.0" width="334" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Setaya Khrystyna Oleksandrivna">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ug4-fY-P7Y"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Q7M-9N-B3P">
-                                        <rect key="frame" x="0.0" y="294" width="314" height="41"/>
-                                        <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w0O-EY-Ngs">
-                                                <rect key="frame" x="0.0" y="0.0" width="314" height="41"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
-                                                <state key="normal" title="Danilov Yehor Oleksandrovych">
-                                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="buttonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zl8-1T-bBG"/>
-                                                </connections>
-                                            </button>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                            </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="0vY-32-itn">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" relation="lessThanOrEqual" secondItem="hG0-Rm-M2V" secondAttribute="bottom" constant="483" id="F6r-47-14W"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hG0-Rm-M2V" secondAttribute="trailing" constant="20" id="MMq-8w-09u"/>
-                            <constraint firstItem="hG0-Rm-M2V" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="p7d-wd-Vbl"/>
-                            <constraint firstItem="hG0-Rm-M2V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="smo-sh-EeN"/>
+                            <constraint firstItem="0vY-32-itn" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="7xJ-sR-8z0"/>
+                            <constraint firstItem="0vY-32-itn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="BVC-Co-0jE"/>
+                            <constraint firstItem="0vY-32-itn" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="EJP-UM-gMF"/>
+                            <constraint firstItem="0vY-32-itn" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="k5W-vg-Pd2"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="List" id="gNy-7y-wqD"/>
+                    <navigationItem key="navigationItem" title="Our family" id="gNy-7y-wqD"/>
                     <connections>
-                        <outletCollection property="buttonCollection" destination="3jf-bn-Xr7" collectionClass="NSMutableArray" id="RnX-tE-dmq"/>
-                        <outletCollection property="buttonCollection" destination="bfv-DB-q61" collectionClass="NSMutableArray" id="Fjj-QG-kNe"/>
-                        <outletCollection property="buttonCollection" destination="WAh-38-jrh" collectionClass="NSMutableArray" id="bx4-mh-ZbL"/>
-                        <outletCollection property="buttonCollection" destination="WUd-T1-KTN" collectionClass="NSMutableArray" id="l0Q-bA-9JY"/>
-                        <outletCollection property="buttonCollection" destination="9MC-C7-M9J" collectionClass="NSMutableArray" id="Hrj-Yc-UPK"/>
-                        <outletCollection property="buttonCollection" destination="jet-bb-CKL" collectionClass="NSMutableArray" id="vtE-rk-tJ2"/>
-                        <outletCollection property="buttonCollection" destination="w0O-EY-Ngs" collectionClass="NSMutableArray" id="jjo-kL-6Qi"/>
+                        <outlet property="tableView" destination="0vY-32-itn" id="lEf-4t-D9I"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1755.072463768116" y="-264.50892857142856"/>
         </scene>
@@ -227,6 +107,7 @@
         <!--Navigation Controller-->
         <scene sceneID="nBB-8e-BVL">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eC6-b6-KEC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="RqH-bf-TxJ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="slk-Db-S6d">
@@ -238,7 +119,6 @@
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="hxZ-Gy-0gS"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eC6-b6-KEC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="844.92753623188412" y="-264.50892857142856"/>
         </scene>
